chat designed, sidebar fixed, message issue of non-spacing fixed, welcome message added

--- a/src/app/sass/index.scss
+++ b/src/app/sass/index.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%auto;
+    padding-left: 220px;
+    height: 100%;
   }
 }
