--- a/src/app/sass/sidebar.scss
+++ b/src/app/sass/sidebar.scss
@@ -8,7 +8,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  flex-basis: 220px;
+  min-width: 220px;
+  position: fixed;
+  top:0;
+  left: 0;
   &>div{
     margin-bottom: 24px;
     ul{
